--- a/css/colour.css
+++ b/css/colour.css
@@ -16,17 +16,15 @@ a:active {color:#737373;}
 input[readonly] {color: #000000;}
 
 #Header {
-  background: #FFF url("../gfx/titles/title.gif") no-repeat;
-  background-position: 20px 10px;
   border-bottom: 1px solid #d7d7d7;
 }
 #Header #HeaderButtons a:link, #Header #HeaderButtons a:visited,#Header #HeaderButtons a:active {color:#1B1B1B;}
 #Header #HeaderButtons a:hover{color:rgba(0, 62, 81, 0.82); text-decoration: none;}
-.SlimHeader #Header {background: linear-gradient(#424242 , #1B1B1B);border:none;}
-.SlimHeader #Header a{color:#D6D6D6;}
-.SlimHeader #Header a:hover, .SlimHeader #Header .current {color:#FFF; text-decoration: none;}
-.SlimHeader #Header #HeaderButtons a:link, .SlimHeader #Header #HeaderButtons a:visited,.SlimHeader #Header #HeaderButtons a:active {color:#1B1B1B;}
-.SlimHeader #Header #HeaderButtons a:hover{color:rgba(0, 62, 81, 0.82); text-decoration: none;}
+#Header {background: linear-gradient(#424242 , #1B1B1B);border:none;}
+#Header a{color:#D6D6D6;}
+#Header a:hover, #Header .current {color:#FFF; text-decoration: none;}
+#Header #HeaderButtons a:link, #Header #HeaderButtons a:visited, #Header #HeaderButtons a:active {color:#1B1B1B;}
+#Header #HeaderButtons a:hover{color:rgba(0, 62, 81, 0.82); text-decoration: none;}
 
 #Footer {border-top: 1px solid #BBBBBB;}
 #TextHeader, #TextHeader a {color:#616161;}
