FIX: Logo went transparent - fix for last commit
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@8826 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -21,7 +21,7 @@ input[readonly] {color: #000000;}
 #Header #HeaderButtons a:link, #Header #HeaderButtons a:visited,#Header #HeaderButtons a:active {color:#1B1B1B;}
 #Header #HeaderButtons a:hover{color:rgba(0, 62, 81, 0.82); text-decoration: none;}
 #Header {background: linear-gradient(#424242 , #1B1B1B);border:none;}
-#Header a{color:#fff;opacity:0.7;}
+#Header li a{color:#fff;opacity:0.7;}
 #Header a:hover, #Header .current {opacity:1;text-decoration: none}
 #Header #HeaderButtons a:link, #Header #HeaderButtons a:visited, #Header #HeaderButtons a:active {color:#1B1B1B;}
 #Header #HeaderButtons a:hover{color:rgba(0, 62, 81, 0.82); text-decoration: none;}
