CHG: Re-implement active link colouring using opacity
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@8831 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -12,7 +12,7 @@ h1 {color: #000000;}
 a:link {color:#737373;}
 a:visited {color:#737373;}
 a:hover {color:#000000;}
-a:active {color:#737373;}
+a:active {opacity:0.6;}
 input[readonly] {color: #000000;}
 
 #Header {
@@ -47,9 +47,9 @@ input[readonly] {color: #000000;}
 .HorizontalWhiteNav a:hover, .BasicsBox .VerticalNav a:hover, .ListTitle a:hover {color:#000000;}
 .HorizontalWhiteNav li, .HorizontalNav li {border-left:1px solid #737373;}
 /* Search Bar */
-#SearchBoxPanel a:link, #SearchBoxPanel a:visited, #SearchBoxPanel a:hover, #SearchBoxPanel a:active,
+#SearchBoxPanel a:link, #SearchBoxPanel a:visited, #SearchBoxPanel a:hover,
 #ResearchBoxPanel a:link, #ResearchBoxPanel a:visited, #ResearchBoxPanel a:hover, #ResearchBoxPanel a:active
-{color:#fff;}
+{color:#fff;text-decoration:none;}
 
 #ThemeBoxPanel,  .RecordPanel, .ResourcePanel, .ResourcePanelSmall, .ResourcePanelLarge{background: #eee;}
 #ThemeBoxPanel, #SearchBoxPanel, #ResearchBoxPanel, .HomePanelIN, .RecordPanel .RecordDownload, .RecordPanel, .ResourcePanel, .ResourcePanelSmall, .ResourcePanelLarge
