NEW: filter functionality for node options. Note: it does not apply to category trees
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@8872 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1180,6 +1180,10 @@ form.FormFilter button {
     float: right;
 }
 
+form.FormFilter button.ClearButton {
+    margin-right: 10px;
+}
+
 .HiddenTile {
     border: 1px solid red !important;
     margin: -2px ;
@@ -1221,3 +1225,8 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
 #AdminManageMetadataFieldOptions > .BottomInpageNav {
     width: 540px;
 }
+
+
+/* Custom filters (extends the default form filters in ResourceSpace) */
+#FilterNodeOptions { width: 510px; }
+#FilterNodeOptions .FilterItemContainer > label { width: 150px; }
