--- a/css/global.css
+++ b/css/global.css
@@ -193,6 +193,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 #CentralSpace .SearchWidth {width: 550px;font-size: 0.9em ;margin: 0px 0px;padding: 0px;}
 #CentraSpace .SearchWidthExp {width:200px;font-size: 0.9em ;margin: 0px 0px;padding: 0px;}
 #CentralSpace .SplitSearch {float: left; margin-left: 5px;margin-right: 5px;}
+.NumberSearchWidth {font-size: 0.9em;width:80px;font-size: 0.9em;margin: 0px 0px;padding: 0px;margin-bottom:3px;}
 
 .CollectionPanelShell {padding:0;float: left;margin: 0px 15px 5px 0px;width: 97px;height: 120px; text-align: left;}
 .CollectionPanelInfo{padding-bottom:3px;}
