CHG: Collection tools only appear when hovering.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@8974 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -266,7 +266,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 .ResourcePanelSmall .ResourcePanelIcons {font-size:0.8em;}
 .ResourceAlignLarge {width:365px;height:365px;text-align: center;vertical-align: middle;}
 
-.ResourcePanelIcons a, .CollectionPanelInfo a	{float: right;margin-right: 0.5em;text-decoration:none;}
+.ResourcePanelIcons a, .CollectionPanelTools a	{;margin-right: 0.5em;text-decoration:none;}
 .ListTools a	{float: right;margin-left: 5px;text-decoration:none;}
 .ResourcePanelIcons a:hover	{text-decoration:none;}
 .ListTools a:hover	{text-decoration:none;}
@@ -1253,3 +1253,6 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
     {
     visibility:visible;
     }
+    
+.CollectionPanelTools {visibility:hidden;}
+.CollectionPanelShell:hover .CollectionPanelTools {visibility:visible;}
