NEW: View full site functionality included in the footer when responsive is active to allow users to use the full site version even on a smaller screen device
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9045 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -21,6 +21,12 @@
 #UICenter {
     width:100% !important;
 }
+
+.ResponsiveViewFullSite {
+    text-align: center;
+    margin-top: 10px;
+}
+
 @media(max-width:1100px) {
     #SearchBarContainer {
         margin:0;
