FIX: View full site for responsive was showing even on devices that didn't require it
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9094 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1256,3 +1256,5 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
     
 .CollectionPanelTools {visibility:hidden;}
 .CollectionPanelShell:hover .CollectionPanelTools {visibility:visible;}
+
+.ResponsiveViewFullSite { display: none; }
