FIX: added a close button for KnowledgeBase Modal
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9193 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1006,6 +1006,9 @@ div.video-js {margin:auto;}
     padding: 14px 20px 10px 20px;
 }
 
+#modal .BasicsBox .HelpHeader a { color: #e0e0e0; }
+#modal .BasicsBox .HelpHeader .backtoresults { margin-top: 15px; }
+
 /* Dropdown Actions */
 #CollectionMenu .ActionsContainer {
 	margin: 10px 0px;
