CHG: replace line break used for layout spacing with CSS in footer.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9225 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -136,7 +136,7 @@ div#Header.SlimHeaderFixedPosition #HeaderNav2 li:last-child { margin-right: 40p
 div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
 div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 
-#Footer {clear: both; margin:20px 25px;padding:0;text-align:left;}
+#Footer {clear: both; margin:20px 25px 38px 25px;padding:0;text-align:left;}
 #FooterNavRight {float:right;text-align:right;margin-top: 10px;clear: right;}
 #FooterNavRightBottom {float:right;text-align:right;margin-top: 10px;clear: right;}
 #FooterNavLeft {float:left;text-align:left;margin-top: 10px;}
