FIX: Category tree popup used wrong/unclear colours when activated from Simple Search
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9294 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -91,7 +91,7 @@ input[readonly] {color: #000000;}
 	{color:#FFF;}
 .HomePanel h2{color:#FFF;}
 
-#SearchBoxPanel, #ResearchBoxPanel,#HomeSiteText.dashtext,.HomePanelIN {
+#SearchBoxPanel, #ResearchBoxPanel,#HomeSiteText.dashtext,.HomePanelIN, .PopupCategoryTree {
 	background: rgba(0, 0, 0, 0.65);
 	color:#FFF;
 }
