NEW: Pill-like display for selected keywords; made fields a little larger.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9310 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -354,3 +354,10 @@ UL.jqueryFileTree A:hover {background-color:initial !important;}
 	background: rgba(30, 30, 30, 0.70);
 	color:#FFF;
 }
+
+/* Highlight selected keywords */
+input:checked + .customFieldLabel, .keywordselected
+  {
+  background-color: #ccc;
+  }
+
