--- a/css/global.css
+++ b/css/global.css
@@ -75,7 +75,7 @@ button[type="submit"] { font-size: 1em; }
 .checkboxtext {margin-right: 2px;width: 160px;display: inline-block;*display:inline;*zoom: 1;}
 .checkboxes{margin-top: 5px;padding-left: 300px;}
 .verticalcheckboxes {padding-left: 300px;}
-.checkboxtext .customFieldLabel {float:none;}
+
 .editcheckboxes {float:left;padding-left: 300px;}
 
 .radioblock { float: left;padding-left: 300px;clear: left;margin-top: -1em;}
@@ -313,7 +313,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 .Question .customFieldset { padding: 0; border: 0;}
 .Question #capswarning { margin-left: 190px; display: none; color: red;font-weight: bold;}
 .Question .Lineup {margin: 3px 0px;}
-.Question .stdwidth,.stdwidth{width: 360px;font-size: 1em;margin: 3px 0px;}
+.Question .stdwidth,.stdwidth{width: 420px;font-size: 1em;margin: 3px 0px;}
 .Question select {font-size: 1em ;margin: 3px 0px;}
 .Question .medwidth,.medwidth{width: 250px;font-size: 1em;margin: 3px 0px;}
 .Question .shrtwidth,.shrtwidth{width: 145px;font-size: 1em;margin: 3px 0px;}
@@ -462,10 +462,10 @@ behavior: url('../css/iepngfix.htc');
 .Breadcrumbs {float:left;margin-top:4px;}
 .SearchBreadcrumbs {margin-bottom:10px;}
 
-.CategoryBox {overflow:auto;width:360px;height:80px;padding:2px;font-size:1em;}
+.CategoryBox {overflow:auto;width:420px;height:80px;padding:2px;font-size:1em;}
 .MiniCategoryBox {overflow:auto;width:auto;height:80px;padding:2px;font-size:1em;}
  
-.CategoryTree {overflow:auto;width:360px;height:400px;display:none;}
+.CategoryTree {overflow:auto;width:420px;height:400px;display:none;}
 .backline {
 	background-image: url(../gfx/interface/line.gif);
 	background-position: 14px 0px;
@@ -531,7 +531,7 @@ div.autocomplete ul li {
 #overlay{position: absolute; top: 0; left: 0; z-index: 90; width: 100%; height: 500px;}
 
 .FormHelp{margin: 0px 0px 10px 300px;padding: 0;}
-.FormHelpInner{width:360px;padding:5px;margin:10px 0 0 0;}
+.FormHelpInner{width:420px;padding:5px;margin:10px 0 0 0;}
 
 #ThemeBox {padding:0;margin:0;text-align:left;width: 170px;}
 #ThemeBoxPanel {width: 170px;padding:0;margin:0;}
@@ -556,7 +556,7 @@ div.autocomplete ul li {
 #advancedTooltip{
 	padding:5px;
 	width: auto;
-	max-width: 360px;
+	max-width: 420px;
 	}
 	
 #LoadingBox
@@ -1262,4 +1262,12 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
 .CollectionPanelShell:hover .CollectionPanelTools {visibility:visible;}
 #FilterNodeOptions .FilterItemContainer > label { width: 150px; }.tag-editor li { padding: initial; }
 
+/* Pill-like display for keywords */
 .ResponsiveViewFullSite { display: none; }
+.Question .customFieldLabel, .keywordselected {float:none;border-radius:8px;margin-right:10px;padding:2px 6px;margin-left:0;}
+.customFieldset input[type=checkbox] {margin:0 2px 0 0;}
+.keywordselected {display:inline;}
+.keywordselected a {padding-left:8px;}
+
+
+
