FIX: photoholder showing small overlap if using small slideshow
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9469 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1269,5 +1269,8 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
 .keywordselected {display:inline;}
 .keywordselected a {padding-left:8px;}
 
+#photoholder {	
+	margin: 1px;
+}
 
 
