NEW: emu plugin funcionality - ability to sync EMu with ResourceSpace in a master-slave relationship with the ability to also pull in media files as either original file (upon creation of the resource) or as alternative files (when updating existing resources)
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9671 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/plugins/emu/css/style.css
+++ b/plugins/emu/css/style.css
@@ -1,1 +1,3 @@
 #EmuObjectDetailContainer.Listview tr td:first-child { width: 30%; }
+#emu_test_script_log { width: 100%; height: 350px; }
+.RSButton { height: 30px; display: inline-block; border-radius: 6px; text-align: center; }
