NEW: annotation capability based on fixed list fields (currently)
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@9885 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -344,7 +344,7 @@ div.MessageBox a {
 }
 UL.jqueryFileTree A {color:#000;background-color:initial;}
 UL.jqueryFileTree A:hover {background-color:initial !important;}
-#previewimage { border: 1px solid #CCC; }
+#previewimage, #previewimagecopy { border: 1px solid #CCC; }
 
 /* chosen collection div */
 #CollectionDiv #MinColDrop .chosen-single:hover, #CollectionDiv #colselect .chosen-single:hover {color:#444;}
@@ -360,4 +360,3 @@ input:checked + .customFieldLabel, .keywordselected
   {
   background-color: #ccc;
   }
-
