FIX: icon too close to text
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10071 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/lib/annotorious_0.6.4/plugins/RSTagging/rs_tagging.css
+++ b/lib/annotorious_0.6.4/plugins/RSTagging/rs_tagging.css
@@ -17,7 +17,8 @@
 }
 
 .RSTagging-tag .fa-exclamation-triangle,
-.RSTagging-tag .fa-plus {
+.RSTagging-tag .fa-plus,
+.RSTagging-tag .fa-database {
     margin-right: 3px;
 }
 
