CHG: colour for annotations as it can sometimes be very hard to see depending on the image background
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10075 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1304,15 +1304,15 @@ UL.jqueryFileTree A:hover {font-weight:bold;}
 }
 
 .ToolsOptionLink:hover {
-    color: #000;
+    color: #79BC41;
     text-decoration: none;
 }
 
 .ToolsOptionLink.Enabled {
-    color: #000;
+    color: #79BC41;
 }
 
 a.Enabled, a:visited.Enabled {
-    color: #000;
+    color: #79BC41;
     text-decoration: underline;
 }
