CHG: Improved loading box image (less dated)
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10209 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -369,3 +369,10 @@ input:checked + .customFieldLabel, .keywordselected
   {
   background-color: #ccc;
   }
+  
+#LoadingBox
+	{
+	border-radius:5px;
+	background-color:white;
+    color:black;
+	}
