CHG: Minor styling changes to forms; dropped small thumbs selection from System Config
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10210 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -123,7 +123,7 @@ input[readonly] {color: #000000;}
 
 .NavUnderline {border-bottom: 1px solid #5A7599;}
 .ListviewStyle thead,.ListviewTitleStyle{background:#DDD;}
-.Question{border-top: 1px solid #BBBBBB;}
+.Question, .QuestionSubmit {background: linear-gradient(#fff, #eee);}
 .Question select .optionWeekend { background-color: #ccc; }
 .Question.FieldSaveError {background-color: #F1A9A0;}
 div.autocomplete {background-color:white;border:1px solid #888;}
