FIX: Fixed styling issues on the user request page brought about by incorrect previous commit r7630 that meant login_form was always included. Updated form styling to work with image background.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10271 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -343,6 +343,8 @@ div.MessageBox a {
 	background: rgba(30, 30, 30, 0.7);
 	border: 1px solid #B0B0B0;
 }
+#login_box .Question {background:none;border-bottom:1px solid #666;}
+#login_box .QuestionSubmit {background:none;}
 
 #login_box, #login_box h1,  #login_box a{
 	color: #FFF;
