--- a/css/global.css
+++ b/css/global.css
@@ -248,7 +248,7 @@ div#SearchBox.SlimHeaderFixedPosition { margin-top: 80px; }
 /*Resource Panel layout*/
 .ResourcePanel {padding:0;margin:0 10px 10px 0;width: 150px;float:left;height:230px;position:relative;}
 .ResourcePanelPreview {height: 156px;width: 156px;margin: 3px;}
-.ResourcePanelInfo {margin: 5px;overflow:hidden;white-space:nowrap;padding:0;text-align:justify;}	
+.ResourcePanelInfo {margin: 5px;overflow:hidden;white-space:nowrap;padding:0;text-align:justify;text-overflow: ellipsis;}	
 .ResourcePanelCountry {margin-right: 5px;margin-left: 5px;margin-bottom: 0px;float: left;clear: left;display:inline;}	
 .ResourcePanelIcons {padding: 5px;text-align:right;position:absolute;bottom:0;right:0;width:142px;}	
 .ResourcePanelSmallIcons {padding-left: 5px;}	
