--- a/css/colour.css
+++ b/css/colour.css
@@ -310,6 +310,7 @@ li.plupload_droptext {color:#999;}
     {
     background-color: #e6e6e6;
     box-shadow: 0 0 40px rgba(0,0,0,0.5);
+    border-radius: 5px;
     }
 #modal .RecordHeader, #modal .BasicsBox h1, #modal .TopInpageNav
   {
