--- a/css/global.css
+++ b/css/global.css
@@ -620,7 +620,7 @@ li.plupload_droptext {font-size: 1.1em;}
     cursor: pointer;
     }
 
-h2.CollapsibleSectionHead {
+h2.CollapsibleSectionHead, h1.CollapsibleSectionHead {
 	padding: 0.1em 0 0.5em 0;
 }
 
